# codes

./: .gitignore
codes/: clone.sh  code-man.bat  code-man.sh  gi.sh  he.org  install.sh  settings.p.xml  shadowsocks-config.json
codes/android/ad-library/: .classpath  .project  AndroidManifest.xml  build.xml
codes/android/alipay-library/: .classpath  .project  AndroidManifest.xml  build.xml
codes/android/alipay-library/my_alipay_rsa_keys/: key_alipay_rsa_public.txt  key_pkcs8_private.txt  key_rsa_public.txt  rsa_private_key.pem  rsa_public_key.pem
codes/android/cNdk/: .cproject  .project
codes/android/cNdk/Debug/: makefile  sources.mk
codes/android/gfan-library/: .classpath  .project  AndroidManifest.xml  build.xml  project.properties
codes/android/my-library/: .classpath  AndroidManifest.xml  build.xml
codes/android/smartqApp/: .classpath  .project  AndroidManifest.xml  ant.properties  build.xml  local.properties  proguard.cfg  project.properties
codes/android/smartqApp/.externalToolBuilders/: ant.launch
codes/android/smartqApp/ant/: app_wd4web.sql  build.xml  libproject-list.xml  manifest-merge.xml  merger.xslt
codes/android/smartqApp/jni/: Android.mk  Application.mk
codes/android/smartqApp/keystore/: he.keystore
codes/android/smartqApp/test/: merged.xml
codes/android/smartqAppTest/: .classpath  .project  AndroidManifest.xml  ant.properties  build.xml
codes/android/smartqAppTest/ant/: build.xml
codes/android/umeng-library/: .classpath  .project  AndroidManifest.xml  build.xml  project.properties
codes/android/useNdk/: .project  AndroidManifest.xml  build.xml  local.properties
codes/android/useRobotium/: .classpath  .project  AndroidManifest.xml  build.xml  local.properties
codes/bash/: code-commit.sh
codes/buildsupport/AntTask/: .classpath  build.xml  ivy.xml  local.properties
codes/c/: .gitignore
codes/c/crossword/: .gitignore  CMakeLists.txt  ios-build.sh
codes/c/myddriver/: .cproject  .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  .project  Makefile  hello.c  hello.ko  hello.mod.c  kernel-build.mk  modules.order  myddriver.cbp  myddriver.layout  usb-lamp.mk  usb-setup.mk
codes/c/opensource/cars-irrlicht-ode/: CMakeLists.txt  FindIrrlicht.cmake  FindOde.cmake  build.py
codes/c/opensource/egc-race-circuit/: CMakeLists.txt  win32-cbp-mingw-build.bat  win32-vs-build.bat
codes/c/opensource/game-board-sdl/: .gitignore  CMakeLists.txt
codes/c/opensource/opengl-rublix-cube/: CMakeLists.txt  FindFreeGlut.cmake  FindGlew.cmake  build.py  prepare.sh
codes/c/opensource/opengl-rublix-cube/src/game/resource/: Face.h  ResMgr.h
codes/c/opensource/tuxtuner/: CMakeLists.txt  Makefile  main.cpp
codes/c/opensource/tuxtuner/mine/: CMakeLists.txt
codes/c/useogre/: CMakeLists.txt
codes/c/usesdl/: .gitignore  CMakeLists.txt  build.bat  build.sh  car.cpp  car.h  keyboard_handler.cpp  keyboard_handler.h  main.cpp
codes/c/usesdl/win32/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  racecar.sln  racecar.vcproj
codes/c/wxMedia/: wxMedia.bmarks  wxMedia.cbp  wxMedia.depend  wxMedia.layout  wxMediaApp.cpp  wxMediaMain.cpp  wxMediaMain.h  wx_pch.h
codes/c/wxMedia/make/: CMakeLists.txt  Findavcodec.cmake  wxMedia-Debug.mak  wxMedia.mak
codes/c/wxWi/: common-vars.mak  cpp-unit.mak  open-shell.script  use-boost.mak  wxWi-Debug.mak  wxWi-Release.mak  wxWi-Sample.mak  wxWi-TEST.mak  wxWi-WinRelease.mak  wxWi.bmarks  wxWi.cbp  wxWi.layout  wxWi.mak  x.sh
codes/clojure/parser/: .classpath  .gitignore  .project  build.bat  pom.xml
codes/console/java-tools/: .classpath  .ensime  .project  build.sbt  java
codes/data/cars/: car.blend  car.blend1  street.blend
codes/data/dancer/: gingerbread-man.blend  gingerbread-man.blend1
codes/data/rubik/: Cube3D.mtl  rubik.blend
codes/doc/: Db.html  Diagno.html  Install.html  Object.html  Oradg.html  Roles.html  TroutApp.html  Vagrant.html  Virsh.html  ZK.html  index.html
codes/fedora/: install.history  pkg.rb
codes/infra/ansible/: site.yml
codes/infra/docker/: crane.yaml  docker-compose.yml
codes/infra/vagrant/: Vagrantfile
codes/mint/: dpkg-get-selections.txt
codes/objc/: sample.d  sample.m
codes/os-x/: readme.txt  start.command  start.sh  ws.py  ws.sh
codes/os-x/user-home/: .vimrc  bin  env-setup.sh  os-x.vimrc
codes/pc/: build.sh
codes/pc/common-utils/: .classpath  .project  pom.xml
codes/pc/swing/: .classpath  .project  .scala_dependencies  build.properties  build.xml  jni.bat  pom.xml  yguardlog.xml
codes/pc/swingapp/: .classpath  .project  pom.xml
codes/pc/use-antlr/: .classpath  .project  build.xml  ivy.xml  pom.xml
codes/pc/webcrawl/: .classpath  .gitignore  .project  build.sh  pom.xml
codes/python/: down-jw.py  readme.txt  use-pexpect.py
codes/python/fntr/: fntr.py
codes/python/log4mongo/: log4mongo.ipy  vl.bat  vl.ipy
codes/ruby/: agri_spec.rb  db-og.rb  db.rb  notice.rb  rlwr.rb  rrds.rb  rwx.rb  rzk.rb
codes/scala/: readme.txt
codes/scala/scala/: build.sh  pom.xml
codes/start/: android.sh  clj.sh  codeblocks.sh  java-web.sh  php-prj.sh  swing.sh
codes/tcl/: script.exp  server.exp
codes/ubuntu/: ci.sh  co.sh  dpkg-get-selections.installed  dpkg-get-selections.txt  packages.installed  setup-env.sh  setup-path.sh  vboxfix.sh
codes/ubuntu/script/: jdk.sh
codes/ubuntu/start/: android.sh  php-prj.sh  scala.sh  swing.sh
codes/ubuntu/user-home/: coloritrc  my.zshrc  oh-my-zsh.zshrc  u.vimrc  vundle.vimrc  w.zshrc  x.vimrc
codes/ubuntu/zsh/: zshrc
codes/web/rhc-jws/: .classpath  .project
codes/web/wd4j/: .classpath  .project  build.xml  ivy.xml
codes/web/wd4web/: .project  config.yaml  index.php  new-appuse.php  todo.txt
codes/winxp/: console.bat  ws.bat
codes/winxp/VC/: NMV.sln
codes/winxp/couchdb/: couchdb.bat
codes/winxp/mongo/: mongo.bat
codes/winxp/script/: cmd.txt
codes/winxp/ubuntu/: envvars-server.bat  opensource-storm.bat
codes/winxp/user-home/: .bash_history  .gitconfig  .lesshst  _viminfo  _vimrc  setup-vim.bat
codes/ws/: .gitignore
codes/ws/codeblocks10.5/: he.workspace
(+2379 files in other folders)
