cmake_minimum_required(VERSION 2.8.7)

project(racecar)
set(SRCS car.cpp keyboard_handler.cpp main.cpp)
add_executable(racecar ${SRCS})

if(WIN32)
	set(CMAKE_CXX_LIBRARY_ARCHITECTURE x86)
	set(CMAKE_INCLUDE_PATH e:/cpp/libs/SDL2-devel-2.0.3-VC/SDL2-2.0.3;e:/cpp/libs/SDL2_image-devel-2.0.0-VC/SDL2_image-2.0.0)
	set(CMAKE_LIBRARY_PATH e:/cpp/libs/SDL2-devel-2.0.3-VC/SDL2-2.0.3;e:/cpp/libs/SDL2_image-devel-2.0.0-VC/SDL2_image-2.0.0)
endif()

find_package(PkgConfig)
if(WIN32)
	find_package(SDL)
	find_package(SDL_image)

	if(SDL_FOUND)
		include_directories(${SDL_INCLUDE_DIR})
		target_link_libraries(racecar ${SDL_LIBRARY})
	else()
		MESSAGE("SDL not found")
	endif()

	if(SDLIMAGE_FOUND)
		include_directories(${SDLIMAGE_INCLUDE_DIR})
		target_link_libraries(racecar ${SDLIMAGE_LIBRARY})
	else()
		MESSAGE("SDLIMAGE not found")
	endif()
elseif(UNIX)
	pkg_search_module(SDL2 REQUIRED sdl2)
	include_directories(${SDL2_INCLUDE_DIRS})
	target_link_libraries(racecar ${SDL2_LIBRARIES})

	pkg_search_module(SDL2_IMAGE REQUIRED SDL2_image)
	include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
	target_link_libraries(racecar ${SDL2_IMAGE_LIBRARIES})
endif()

